[package]
name = "db"
version = "0.1.0"
authors = ["tokcum <tobias.mucke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Local dependencies
[dependencies]
model = { path = "../model" }

# External dependencies
[dependencies.rusqlite]
version = "0.23.1"

[dependencies.serde_json]
version = "1.0.55"
