[package]
name = "model"
version = "0.1.0"
authors = ["tokcum <tobias.mucke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Local dependencies
[dependencies]

# External dependencies
[dependencies.chrono]
version = "0.4.11"
features = ["serde"]

[dependencies.serde]
version = "1.0.111"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.55"
