[package]
name = "ws"
version = "0.1.0"
authors = ["tokcum <tobias.mucke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Local dependencies
[dependencies]
appl = { path = "../appl" }
model = { path = "../model" }

# External dependencies
[dependencies.actix-rt]
version = "1.1.1"

[dependencies.actix-files]
version = "0.2.2"

[dependencies.actix-web]
version = "2.0.0"
